<resources>
    <string name="app_name">TugasPertemuan6</string>
    <string name="tiket">Tiket Pesawat</string>
    <string name="pergipulang">Pergi/Pulang</string>
    <string name="multikota">Multi-kota</string>
    <string name="dari">Dari</string>
    <string name="ke">Ke</string>
    <string name="tgl_berangkat">Tanggal Berangkat</string>
    <string name="waktu_berangkat">Waktu Berangkat</string>
    <string name="penumpang">Penumpang</string>
    <string name="kelas_penerbangan">Kelas Penerbangan</string>
    <string name="pesan">Pesan</string>

    <array name="cities">
        <item>Jakarta, Indonesia</item>
        <item>Bali/Denpasar, Indonesia</item>
        <item>Surabaya, Indonesia</item>
        <item>Medan, Indonesia</item>
        <item>Makassar, Indonesia</item>
        <item>Yogyakarta, Indonesia</item>
        <item>Solo, Indonesia</item>
    </array>
    <array name="countries">
        <item>Sydney, Australia</item>
        <item>Istanbul, Turki</item>
        <item>Manila, Filipina</item>
        <item>Tokyo, Jepang</item>
        <item>New York, Amerika Serikat</item>
        <item>Bangkok, Thailand</item>
        <item>Singapore, Singapore</item>
    </array>
    <array name="passengers">
        <item>1 penumpang</item>
        <item>2 penumpang</item>
        <item>3 penumpang</item>
    </array>
</resources>