<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/tiket"
            android:layout_margin="5dp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/baseline_airplane_ticket_24"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/rounded"
            android:textColor="@color/blue"
            android:text="@string/pergipulang"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/rounded2"
            android:textColor="@color/white"
            android:text="@string/multikota"
            android:layout_margin="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded3"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_airplanemode_active_24"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dari"
                android:layout_gravity="center"
                android:textSize="14dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <Spinner
            android:id="@+id/spin_cities"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded4"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_airplanemode_active_24"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ke"
                android:textSize="14dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <Spinner
            android:id="@+id/spin_countries"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded4"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_calendar_month_24"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tgl_berangkat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tgl_berangkat"
                android:textSize="16dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_calendar_month_24"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/waktu_berangkat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waktu_berangkat"
                android:textSize="16dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:timePickerMode="spinner"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/penumpang"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="Kelas Penerbangan"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spin_passengers"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded4"
                android:padding="5dp"
                android:layout_marginRight="10dp"/>
            <Spinner
                android:id="@+id/spin_category"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded4"
                android:padding="5dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonCari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pesan"
            android:textStyle="bold"
            android:textSize="16dp"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>
</LinearLayout>